--- a/src/app/pages/ProcedeDetail/detail/detail.component.scss
+++ b/src/app/pages/ProcedeDetail/detail/detail.component.scss
@@ -2,7 +2,7 @@
     box-shadow: -5px 5px 6px 0 rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     overflow: hidden;
-    border: 2px solid #92ecf85d;
+    // border: 2px solid #92ecf85d;
     
 
   
