--- a/src/app/pages/ListeNotifications/liste-notif/liste-notif.component.scss
+++ b/src/app/pages/ListeNotifications/liste-notif/liste-notif.component.scss
@@ -1,7 +1,7 @@
 
 .notif{
     width: 100%;
-    height: 120px;
+  //  height: 120px;
     padding: 5px;
     background-color: #ffffff;
     border-radius: 7px;
